@@ -15,8 +15,8 @@ Power calculations along the lines of Cohen (1988)
 \tabular{ll}{
 Package: \tab pwr\cr
 Type: \tab Package\cr
-Version: \tab 1.1-2\cr
-Date: \tab 2015-02-27\cr
+Version: \tab 1.1-3\cr
+Date: \tab 2015-04-02\cr
 License: \tab GPL (>= 3) \cr
 }
 This package contains functions for basic power calculations using effect sizes and 
@@ -37,7 +37,7 @@ This package contains functions for basic power calculations using effect sizes 
 }
 \author{
 Stephane Champely, based on previous works by Claus Ekstrom and Peter Dalgaard,
-with contributions of Jeffrey Gill.
+with contributions of Jeffrey Gill and Jan Wunder.
 
 Maintainer: Helios De Rosario-Martinez <helios.derosario@gmail.com>
 }
